--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,12 @@
             android:text="@string/meus_contatos"
             android:textAlignment="center"
             android:textSize="30dp" />
+        <Button
+            android:id="@+id/btnNovoContato"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Novo Contato"
+            android:layout_marginTop="8dp"/>
 
         <ListView
             android:id="@+id/lvContatos"
