--- a/app/src/main/res/layout/lista_contato.xml
+++ b/app/src/main/res/layout/lista_contato.xml
@@ -26,7 +26,7 @@
             android:id="@+id/tvContatoTelefone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Telefone"
+            android:text="@string/telefone"
             android:textSize="16sp"
             android:textColor="#555"/>
     </LinearLayout>
